bk_ida/gccida/g1/get_attr_memory
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15103:1: error: must use 'enum' tag to refer to type 'attr_memory'
attr_memory  get_attr_memory( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15106:1: error: must use 'enum' tag to refer to type 'attr_memory'
attr_memory result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15135:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type v32; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15208:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type v105; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15209:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type v106; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15217:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type attr_type; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15238:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v124 = (  struct rtx_def *)insn[2]; 
                           ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15242:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 15861, "get_attr_memory"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15242:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 15861, "get_attr_memory"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15271:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v123 = memory_operand( recog_data_0.operand[0], VOIDmode); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15274:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return memory_operand( recog_data_0.operand[1], VOIDmode) != 0; 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15400:32: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return 2 - ( ( memory_operand( recog_data_0.operand[1], VOIDmode) == 0) - 1); 
                               ^~~~~~~~~~~~
                               recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15408:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return memory_operand( recog_data_0.operand[0], VOIDmode) == 0 ? 1 : 3; 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15443:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v122 = memory_operand( recog_data_0.operand[1], VOIDmode); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15446:30: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return 2 * ( memory_operand( recog_data_0.operand[0], VOIDmode) != 0); 
                             ^~~~~~~~~~~~
                             recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15452:31: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( v121 = symbolic_operand( recog_data_0.operand[1], SImode), result = MEMORY_NONE, !v121) ) 
                              ^~~~~~~~~~~~
                              recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15454:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !memory_operand( recog_data_0.operand[0], VOIDmode) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15455:29: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( v118 = memory_operand( recog_data_0.operand[1], VOIDmode), result = MEMORY_BOTH, !v118) ) 
                            ^~~~~~~~~~~~
                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/insn-attrtab.c:15457:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v119 = memory_operand( recog_data_0.operand[0], VOIDmode); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_memory/src/obj/insn-attrtab.o] Error 1
